--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+/* Error: Expected newline.
+ *   ,
+ * 2 | .card {
+ *   |       ^
+ *   '
+ *   scss\components\login.sass 2:7  @import
+ *   scss\style.scss 1:9             root stylesheet */
 
-
-/*# sourceMappingURL=style.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Expected newline.\a   \2577 \a 2 \2502  .card {\d\a   \2502        ^\a   \2575 \a   scss\\components\\login.sass 2:7  @import\a   scss\\style.scss 1:9             root stylesheet";
+}
