--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,2 @@
-@import './components/login.sass';
-@import './components/login.sass';
+@import './components/login.scss';
 @import './components/header.scss';
